# Employee_Task_Tracker

./: .env.sample  README.md  app_config.py  other.txt  pyproject.toml
app/: config.py  csu.py  main.py
app/employees/: models.py  routers.py  schemas.py  services.py  validators.py
app/tasks/: models.py  routers.py  schemas.py  services.py
app/users/: auth.py  auth_utils.py  models.py  routers.py  schemas.py  services.py
migrations/employees/: 0_20231211033038_init.py  0_20231213035411_init.py
migrations/models/: 1_20231205142208_creation-model-user.py  2_20231205144840_user-last-login-nullable.py  3_20231207135502_alter-is_staff-in-User.py
scripts/: csu.py
